projet_gl/src/test/deca/context/valid/3_17/3_17_Decl_Var_Boolean.deca
// Description:
//    Programme déclaration de variable de type boolean
//
// Resultats:
//
// Historique:
//    cree le 09/01/2024

{
        boolean var3;
}
