projet_gl/src/test/deca/context/invalid/3_29/3_29_Condition.deca
// Description:
//    Problème de compatibilité de typage pour l'affichage
//
// Resultats:
//    Ligne 11: Condition does not return a boolean type
// 
// Historique:
//    cree le 09/01/2024

{   
   if(5){}; 
}
